--- a/src/main/View.fxml
+++ b/src/main/View.fxml
@@ -4,113 +4,83 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Controller">
-    <TabPane prefHeight="405.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE">
-        <Tab onSelectionChanged="#loadEncryptionUser" text="Encrypt">
-            <AnchorPane minHeight="0.0" minWidth="0.0">
-                <Button fx:id="button_encrypt" disable="true" layoutX="623.0" layoutY="331.0"
-                        mnemonicParsing="false" onAction="#encrypt" prefHeight="27.0" prefWidth="113.0"
-                        text="Run Encryption"/>
-                <Button layoutX="14.0" layoutY="78.0" mnemonicParsing="false" onAction="#loadFile"
-                        prefHeight="27.0" prefWidth="112.0" text="Load File"/>
-                <Label fx:id="label_documentFileSize" layoutX="162.0" layoutY="83.0" prefHeight="17.0"
-                       prefWidth="102.0"/>
-                <Label fx:id="label_documentName" layoutX="288.0" layoutY="83.0" prefHeight="17.0"
-                       prefWidth="446.0"/>
-                <Button layoutX="14.0" layoutY="118.0" mnemonicParsing="false" onAction="#loadPicture"
-                        prefHeight="27.0" prefWidth="112.0" text="Choose Picture"/>
-                <Label fx:id="label_pictureFileSize" layoutX="162.0" layoutY="123.0" prefHeight="17.0"
-                       prefWidth="102.0"/>
-                <Label fx:id="label_pictureName" layoutX="288.0" layoutY="123.0" prefHeight="17.0"
-                       prefWidth="445.0"/>
-                <ChoiceBox fx:id="choiseBox_encryptionUser" layoutX="421.0" layoutY="331.0"
-                           prefHeight="27.0" prefWidth="190.0"/>
-                <ImageView fx:id="imageView_encrypt" fitHeight="194.0" fitWidth="393.0" layoutX="14.0"
-                           layoutY="164.0" pickOnBounds="true" preserveRatio="true"/>
-                <Label fx:id="label_pictureResolutionEncryption" alignment="TOP_LEFT" layoutX="422.0"
-                       layoutY="164.0" prefHeight="138.0" prefWidth="309.0" wrapText="true"/>
-                <Label alignment="TOP_LEFT" layoutX="14.0" layoutY="14.0" prefHeight="55.0"
-                       prefWidth="717.0"
-                       text="Cryptor is a encryption and steganography tool. It first encrypts any file with secure AES-256 encryption using keys exchanged with Diffie-Hellman key exchange protocol. Cryptor then hides your document in any PNG picture by encoding information into each pixel."
-                       wrapText="true"/>
-                <Label layoutX="422.0" layoutY="306.0" prefHeight="17.0" prefWidth="136.0"
-                       text="Encrypt with key for.."/>
-            </AnchorPane>
-        </Tab>
-        <Tab onSelectionChanged="#loadDecryptionUser" text="Decrypt">
-            <AnchorPane minHeight="0.0" minWidth="0.0">
-                <Label alignment="TOP_LEFT" layoutX="14.0" layoutY="14.0" prefHeight="55.0"
-                       prefWidth="717.0"
-                       text="To extract the document encoded into a picture use this tab. Cryptor scans the imported picture to evaluate if any files are hidden are to be found. If that's the case the original document will be restored and decrypted - assuming the correct key was used."
-                       wrapText="true"/>
-                <Button fx:id="button_decrypt" disable="true" layoutX="623.0" layoutY="331.0"
-                        mnemonicParsing="false" onAction="#decrypt" prefHeight="27.0" prefWidth="113.0"
-                        text="Run Decryption"/>
-                <Button layoutX="14.0" layoutY="78.0" mnemonicParsing="false"
-                        onAction="#loadEncryptedPicture" prefHeight="27.0" prefWidth="112.0"
-                        text="Choose Picture"/>
-                <Label fx:id="label_encryptedPictureFileSize" layoutX="161.0" layoutY="83.0"
-                       prefHeight="17.0" prefWidth="102.0"/>
-                <Label fx:id="label_encryptedPictureName" layoutX="288.0" layoutY="83.0" prefHeight="17.0"
-                       prefWidth="446.0"/>
-                <ChoiceBox fx:id="choiseBox_decryptionUser" layoutX="421.0" layoutY="331.0"
-                           prefHeight="27.0" prefWidth="190.0"/>
-                <ImageView fx:id="imageView_decrypt" fitHeight="194.0" fitWidth="393.0" layoutX="14.0"
-                           layoutY="164.0" pickOnBounds="true" preserveRatio="true"/>
-                <Label fx:id="label_pictureResolutionDecryption" alignment="TOP_LEFT" layoutX="422.0"
-                       layoutY="164.0" prefHeight="138.0" prefWidth="309.0" wrapText="true"/>
-                <Label layoutX="421.0" layoutY="306.0" prefHeight="17.0" prefWidth="136.0"
-                       text="Decrypt with key for.."/>
-            </AnchorPane>
-        </Tab>
-        <Tab onSelectionChanged="#resetTabContacts" text="Contacts">
-            <AnchorPane minHeight="0.0" minWidth="0.0">
-                <TableView fx:id="tableView_users" layoutY="-1.0" onKeyReleased="#selectUserInView"
-                           onMouseClicked="#selectUserInView" prefHeight="373.0" prefWidth="317.0">
-                    <columns>
-                        <TableColumn fx:id="tableColumn_id" prefWidth="63.0" resizable="false" text="ID"/>
-                        <TableColumn fx:id="tableColumn_name" prefWidth="252.0" resizable="false"
-                                     text="NAME"/>
-                    </columns>
-                </TableView>
-                <Label fx:id="label_userName" layoutX="338.0" layoutY="20.0" maxWidth="376.0"
-                       prefHeight="17.0" prefWidth="384.0"/>
-                <Label fx:id="label_exportPubKey" layoutX="338.0" layoutY="69.0" prefHeight="17.0"
-                       prefWidth="384.0" text="This person might need your public key to finish setup."
-                       wrapText="true"/>
-                <Button fx:id="button_exportPublicKey" layoutX="339.0" layoutY="97.0" mnemonicParsing="false"
-                        onAction="#exportPublicKey" prefHeight="27.0" prefWidth="127.0"
-                        text="Export Public Key"/>
-                <Label fx:id="label_setupStatus" layoutX="338.0" layoutY="180.0" prefHeight="17.0"
-                       prefWidth="384.0" wrapText="true"/>
-                <Label fx:id="label_importPubKey" layoutX="338.0" layoutY="204.0" prefHeight="34.0"
-                       prefWidth="384.0"
-                       text="To finish key exchange and generate symmetric crypto keys please import this persons public key."
-                       wrapText="true"/>
-                <Button fx:id="button_importPublicKey" layoutX="338.0" layoutY="251.0" mnemonicParsing="false"
-                        onAction="#importPublicKey" prefHeight="27.0" prefWidth="127.0"
-                        text="Import Public Key"/>
-                <Button fx:id="button_deleteContact" layoutX="626.0" layoutY="331.0" mnemonicParsing="false"
-                        onAction="#deleteUser" prefHeight="27.0" prefWidth="110.0" text="Delete Contact"/>
-            </AnchorPane>
-        </Tab>
-        <Tab onSelectionChanged="#resetTabNewUser" text="New Contact">
-            <AnchorPane minHeight="0.0" minWidth="0.0">
-                <TextField fx:id="textField_UserName" layoutX="81.0" layoutY="19.0" prefHeight="27.0"
-                           prefWidth="655.0"/>
-                <Label layoutX="14.0" layoutY="24.0" prefHeight="17.0" prefWidth="40.0" text="Name:"/>
-                <Button layoutX="641.0" layoutY="331.0" mnemonicParsing="false" onAction="#addUser"
-                        prefHeight="27.0" prefWidth="95.0" text="Add Contact"/>
-                <CheckBox fx:id="checkBox_publicKey" layoutX="14.0" layoutY="73.0" mnemonicParsing="false"
-                          onAction="#checkBoxState" prefHeight="18.0" prefWidth="274.0"
-                          text="This person initialized the key exchange."/>
-                <Label fx:id="label_publicKey" layoutX="149.0" layoutY="117.0" prefHeight="17.0"
-                       prefWidth="446.0" visible="false"/>
-                <Button fx:id="button_loadPublicKey" layoutX="14.0" layoutY="112.0" mnemonicParsing="false"
-                        onAction="#loadPublicKey" prefHeight="27.0" prefWidth="117.0" text="Load Public Key"
-                        visible="false"/>
-            </AnchorPane>
-        </Tab>
-    </TabPane>
+<AnchorPane prefHeight="405.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Controller">
+   <children>
+       <TabPane prefHeight="405.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE">
+          <tabs>
+              <Tab onSelectionChanged="#loadEncryptionUser" text="Encrypt">
+                 <content>
+                     <AnchorPane minHeight="0.0" minWidth="0.0">
+                        <children>
+                            <Button fx:id="button_encrypt" disable="true" layoutX="623.0" layoutY="331.0" mnemonicParsing="false" onAction="#encrypt" prefHeight="27.0" prefWidth="113.0" text="Run Encryption" />
+                            <Button layoutX="14.0" layoutY="78.0" mnemonicParsing="false" onAction="#loadFile" prefHeight="27.0" prefWidth="112.0" text="Load File" />
+                            <Label fx:id="label_documentFileSize" layoutX="162.0" layoutY="83.0" prefHeight="17.0" prefWidth="102.0" />
+                            <Label fx:id="label_documentName" layoutX="288.0" layoutY="83.0" prefHeight="17.0" prefWidth="446.0" />
+                            <Button layoutX="14.0" layoutY="118.0" mnemonicParsing="false" onAction="#loadPicture" prefHeight="27.0" prefWidth="112.0" text="Choose Picture" />
+                            <Label fx:id="label_pictureFileSize" layoutX="162.0" layoutY="123.0" prefHeight="17.0" prefWidth="102.0" />
+                            <Label fx:id="label_pictureName" layoutX="288.0" layoutY="123.0" prefHeight="17.0" prefWidth="445.0" />
+                            <ChoiceBox fx:id="choiseBox_encryptionUser" layoutX="421.0" layoutY="331.0" prefHeight="27.0" prefWidth="190.0" />
+                            <ImageView fx:id="imageView_encrypt" fitHeight="194.0" fitWidth="393.0" layoutX="14.0" layoutY="164.0" pickOnBounds="true" preserveRatio="true" />
+                            <Label fx:id="label_pictureResolutionEncryption" alignment="TOP_LEFT" layoutX="422.0" layoutY="164.0" prefHeight="138.0" prefWidth="309.0" wrapText="true" />
+                            <Label alignment="TOP_LEFT" layoutX="14.0" layoutY="14.0" prefHeight="55.0" prefWidth="717.0" text="Cryptor is a encryption and steganography tool. It first encrypts any file with secure AES-256 encryption using keys exchanged with Diffie-Hellman key exchange protocol. Cryptor then hides your document in any PNG picture by encoding information into each pixel." wrapText="true" />
+                            <Label layoutX="422.0" layoutY="306.0" prefHeight="17.0" prefWidth="136.0" text="Encrypt with key for.." />
+                        </children>
+                     </AnchorPane>
+                 </content>
+              </Tab>
+              <Tab onSelectionChanged="#loadDecryptionUser" text="Decrypt">
+                 <content>
+                     <AnchorPane minHeight="0.0" minWidth="0.0">
+                        <children>
+                            <Label alignment="TOP_LEFT" layoutX="14.0" layoutY="14.0" prefHeight="55.0" prefWidth="717.0" text="To extract the document encoded into a picture use this tab. Cryptor scans the imported picture to evaluate if any files are hidden are to be found. If that's the case the original document will be restored and decrypted - assuming the correct key was used." wrapText="true" />
+                            <Button fx:id="button_decrypt" disable="true" layoutX="623.0" layoutY="331.0" mnemonicParsing="false" onAction="#decrypt" prefHeight="27.0" prefWidth="113.0" text="Run Decryption" />
+                            <Button layoutX="14.0" layoutY="78.0" mnemonicParsing="false" onAction="#loadEncryptedPicture" prefHeight="27.0" prefWidth="112.0" text="Choose Picture" />
+                            <Label fx:id="label_encryptedPictureFileSize" layoutX="161.0" layoutY="83.0" prefHeight="17.0" prefWidth="102.0" />
+                            <Label fx:id="label_encryptedPictureName" layoutX="288.0" layoutY="83.0" prefHeight="17.0" prefWidth="446.0" />
+                            <ChoiceBox fx:id="choiseBox_decryptionUser" layoutX="421.0" layoutY="331.0" prefHeight="27.0" prefWidth="190.0" />
+                            <ImageView fx:id="imageView_decrypt" fitHeight="194.0" fitWidth="393.0" layoutX="14.0" layoutY="164.0" pickOnBounds="true" preserveRatio="true" />
+                            <Label fx:id="label_pictureResolutionDecryption" alignment="TOP_LEFT" layoutX="422.0" layoutY="164.0" prefHeight="138.0" prefWidth="309.0" wrapText="true" />
+                            <Label layoutX="421.0" layoutY="306.0" prefHeight="17.0" prefWidth="136.0" text="Decrypt with key for.." />
+                        </children>
+                     </AnchorPane>
+                 </content>
+              </Tab>
+              <Tab onSelectionChanged="#resetTabContacts" text="Contacts">
+                 <content>
+                     <AnchorPane minHeight="0.0" minWidth="0.0">
+                        <children>
+                            <TableView fx:id="tableView_users" layoutY="-1.0" onKeyReleased="#selectUserInView" onMouseClicked="#selectUserInView" prefHeight="373.0" prefWidth="317.0">
+                                <columns>
+                                    <TableColumn fx:id="tableColumn_id" prefWidth="63.0" resizable="false" text="ID" />
+                                    <TableColumn fx:id="tableColumn_name" prefWidth="252.0" resizable="false" text="NAME" />
+                                </columns>
+                            </TableView>
+                            <Label fx:id="label_userName" layoutX="338.0" layoutY="20.0" maxWidth="376.0" prefHeight="17.0" prefWidth="384.0" />
+                            <Label fx:id="label_exportPubKey" layoutX="338.0" layoutY="69.0" prefHeight="17.0" prefWidth="384.0" text="This person might need your public key to finish setup." wrapText="true" />
+                            <Button fx:id="button_exportPublicKey" layoutX="339.0" layoutY="97.0" mnemonicParsing="false" onAction="#exportPublicKey" prefHeight="27.0" prefWidth="127.0" text="Export Public Key" />
+                            <Label fx:id="label_setupStatus" layoutX="338.0" layoutY="180.0" prefHeight="17.0" prefWidth="384.0" wrapText="true" />
+                            <Label fx:id="label_importPubKey" layoutX="338.0" layoutY="204.0" prefHeight="34.0" prefWidth="384.0" text="To finish key exchange and generate symmetric crypto keys please import this persons public key." wrapText="true" />
+                            <Button fx:id="button_importPublicKey" layoutX="338.0" layoutY="251.0" mnemonicParsing="false" onAction="#importPublicKey" prefHeight="27.0" prefWidth="127.0" text="Import Public Key" />
+                            <Button fx:id="button_deleteContact" layoutX="626.0" layoutY="331.0" mnemonicParsing="false" onAction="#deleteUser" prefHeight="27.0" prefWidth="110.0" text="Delete Contact" />
+                        </children>
+                     </AnchorPane>
+                 </content>
+              </Tab>
+              <Tab onSelectionChanged="#resetTabNewUser" text="New Contact">
+                 <content>
+                     <AnchorPane minHeight="0.0" minWidth="0.0">
+                        <children>
+                            <TextField fx:id="textField_UserName" layoutX="81.0" layoutY="19.0" prefHeight="27.0" prefWidth="655.0" />
+                            <Label layoutX="14.0" layoutY="24.0" prefHeight="17.0" prefWidth="40.0" text="Name:" />
+                            <Button layoutX="641.0" layoutY="331.0" mnemonicParsing="false" onAction="#addUser" prefHeight="27.0" prefWidth="95.0" text="Add Contact" />
+                            <CheckBox fx:id="checkBox_publicKey" layoutX="14.0" layoutY="73.0" mnemonicParsing="false" onAction="#checkBoxState" prefHeight="18.0" prefWidth="274.0" text="This person initialized the key exchange." />
+                            <Label fx:id="label_publicKey" layoutX="149.0" layoutY="117.0" prefHeight="17.0" prefWidth="446.0" visible="false" />
+                            <Button fx:id="button_loadPublicKey" layoutX="14.0" layoutY="112.0" mnemonicParsing="false" onAction="#loadPublicKey" prefHeight="27.0" prefWidth="117.0" text="Load Public Key" visible="false" />
+                        </children>
+                     </AnchorPane>
+                 </content>
+              </Tab>
+          </tabs>
+       </TabPane>
+   </children>
 </AnchorPane>
